# ChangeLog file for MonetDB
# This file is updated with Maddlog

* Fri Jul 27 2018 Sjoerd Mullender <sjoerd@acm.org>
- Removed batDirty flag from BAT record.  Its function is completely
  superseded by batDirtydesc and the dirty flags on the various heaps.

* Tue Jul 24 2018 Sjoerd Mullender <sjoerd@acm.org>
- Removed "masksize" argument of function BAThash.

* Tue May 29 2018 Sjoerd Mullender <sjoerd@acm.org>
- A whole bunch of functions that took an int argument that was used as a
  Boolean (true/false) value now take a value of type bool.  The functions
  BATkeyed, BATordered and BATordered_rev now return a bool instead of
  an int.

* Tue Mar 20 2018 Sjoerd Mullender <sjoerd@acm.org>
- Removed the tdense property: it's function is completely replaced by
  whether or not tseqbase is equal to oid_nil.
