@@ -510,6 +510,7 @@ append_varsized_bat(BAT *b, BAT *n, BAT *s)
 			start++;
 		}
 	}
+	b->theap.dirty = true;
 	return GDK_SUCCEED;
 
       bunins_failed:
@@ -735,7 +736,6 @@ BATappend(BAT *b, BAT *n, BAT *s, bool force)
 			       Tloc(n, start),
 			       cnt * Tsize(n));
 			BATsetcount(b, BATcount(b) + cnt);
-			b->theap.dirty = true;
 		} else {
 			BATiter ni = bat_iterator(n);
 
@@ -758,6 +758,7 @@ BATappend(BAT *b, BAT *n, BAT *s, bool force)
 				}
 			}
 		}
+		b->theap.dirty = true;
 	}
 	if (b->tunique)
 		BBPunfix(s->batCacheid);
@@ -965,6 +966,7 @@ BATslice(BAT *b, BUN l, BUN h)
 				bunfastapp(bn, BUNtail(bi, p));
 			}
 		}
+		bn->theap.dirty = true;
 		bn->tsorted = b->tsorted;
 		bn->trevsorted = b->trevsorted;
 		bn->tkey = b->tkey;
@@ -1361,6 +1363,25 @@ BATsort(BAT **sorted, BAT **order, BAT **groups,
 			 ATOMname(b->ttype));
 		return GDK_FAIL;
 	}
+	if (b->ttype == TYPE_void) {
+		if (!b->tsorted) {
+			b->tsorted = true;
+			b->batDirtydesc = true;
+		}
+		if (b->trevsorted != is_oid_nil(b->tseqbase) || b->batCount <= 1) {
+			b->trevsorted = !b->trevsorted;
+			b->batDirtydesc = true;
+		}
+		if (b->tkey != BATtdense(b)) {
+			b->tkey = !b->tkey;
+			b->batDirtydesc = true;
+		}
+	} else if (b->batCount <= 1) {
+		if (!b->tsorted || !b->trevsorted) {
+			b->tsorted = b->trevsorted = true;
+			b->batDirtydesc = true;
+		}
+	}
 	if (o != NULL &&
 	    (ATOMtype(o->ttype) != TYPE_oid || /* oid tail */
 	     BATcount(o) != BATcount(b) ||     /* same size as b */
@@ -1657,13 +1678,6 @@ BATsort(BAT **sorted, BAT **order, BAT **groups,
 						ords[p] = p + b->hseqbase;
 			}
 		}
-		if (b->ttype == TYPE_void) {
-			b->tsorted = true;
-			b->trevsorted = is_oid_nil(b->tseqbase) || b->batCount <= 1;
-			b->tkey = BATtdense(b);
-		} else if (b->batCount <= 1) {
-			b->tsorted = b->trevsorted = true;
-		}
 		if (!(reverse ? bn->trevsorted : bn->tsorted) &&
 		    (BATmaterialize(bn) != GDK_SUCCEED ||
 		     do_sort(Tloc(bn, 0),
@@ -1697,6 +1711,7 @@ BATsort(BAT **sorted, BAT **order, BAT **groups,
 			MT_lock_unset(&GDKhashLock(pb->batCacheid));
 		}
 	}
+	bn->theap.dirty = true;
 	bn->tnosorted = 0;
 	bn->tnorevsorted = 0;
 	bn->tnokey[0] = bn->tnokey[1] = 0;
@@ -1794,6 +1809,7 @@ BATconstant(oid hseq, int tailtype, const void *v, BUN n, int role)
 			tfastins_nocheck(bn, i, v, Tsize(bn));
 		break;
 	}
+	bn->theap.dirty = true;
 	bn->tnil = n >= 1 && (*ATOMcompare(tailtype))(v, ATOMnilptr(tailtype)) == 0;
 	BATsetcount(bn, n);
 	bn->tsorted = true;
