@@ -1,6 +1,11 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Mon Jul 30 2018 Sjoerd Mullender <sjoerd@acm.org>
+- The macros bunfastapp and tfastins and variants no longer set the dirty
+  flag of the heap they write to.  This now needs to be done separately
+  (and preferably outside of the inner loop).
+
 * Fri Jul 27 2018 Sjoerd Mullender <sjoerd@acm.org>
 - Removed batDirty flag from BAT record.  Its function is completely
   superseded by batDirtydesc and the dirty flags on the various heaps.
